# speech-dispatcher-rs

./: .gitlab-ci.yml  Cargo.toml
examples/: hello_world.rs
speech-dispatcher/: Cargo.toml
speech-dispatcher-sys/: Cargo.toml  build.rs
speech-dispatcher/examples/: hello_world.rs
speech-dispatcher/src/: lib.rs
src/: lib.rs
