[package]
name = "speech-dispatcher"
version = "0.7.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
repository = "https://gitlab.com/ndarilek/speech-dispatcher-rs"
description = "Rusty interface to the speech-dispatcher speech synthesis library"
license = "LGPL-2.1"
edition = "2018"

[dependencies]
lazy_static = "1"
speech-dispatcher-sys = { version = "0.5", path = "../speech-dispatcher-sys" }
